--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = "4.0"
-github-rs = "0.7"
+clap = { version = "4.0", features = ["derive"] }
 serde_json = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 iso8601-timestamp = "0.1.11"
-rayon = "1.5"
+octocrab = "0.18.1"
+chrono = "0.4.23"
+tokio = { version = "1.4.0", features = ["full"] }
+tokio-stream = "0.1.11"
+async-trait = "0.1.60"
