--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,6 +18,9 @@ jobs:
             archive: tar.gz
     steps:
       - uses: actions/checkout@master
+      - name: Install x86_64-unknown-none target
+        run: |
+          rustup target add x86_64-unknown-none
       - name: Compile and release
         uses: rust-build/rust-build.action@v1.3.2
         env:
