--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,19 +6,25 @@ on:
 
 jobs:
   release:
-    name: release ${{ matrix.target }}
+    name: Release ${{ matrix.target }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         include:
-          - target: x86_64-unknown-linux-gnu
+          - target: x86_64-unknown-linux-musl
+            archive: tar.gz tar.xz
+          - target: aarch64-unknown-linux-musl
             archive: tar.gz tar.xz
           - target: x86_64-apple-darwin
             archive: tar.gz
+          - target: aarch64-apple-darwin
+            archive: tar.gz
     steps:
-      - uses: actions/checkout@master
-      - name: Compile and release
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Compile and Release
         uses: rust-build/rust-build.action@v1.3.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -26,24 +32,29 @@ jobs:
           RUSTTARGET: ${{ matrix.target }}
           ARCHIVE_TYPES: ${{ matrix.archive }}
           TOOLCHAIN_VERSION: 1.68.0
+          ADDITIONAL_ARGS: --release
 
   macos-arm-release:
-    name: release mac os arm release
+    name: Release Mac OS ARM
     runs-on: macos-12
     steps:
-      - uses: actions/checkout@master
-      - name: check toolchain
-        run: rustup default
-      - name: Build
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Install and Build
         run: |
           rustup toolchain install stable-aarch64-apple-darwin
           rustup target add aarch64-apple-darwin
           cargo build --release --target aarch64-apple-darwin
-      - name: tar
+
+      - name: Create Tar Archive
         run: tar --directory=target/aarch64-apple-darwin/release -cf archive.tar.gz crime-report
-      - name: upload
+
+      - name: Upload Release
         run: |
           id=$(gh api -H "Accept: application/vnd.github+json" /repos/jborkowski/crime-report/releases/tags/${{ github.ref_name }} --jq .id)
           curl --fail-with-body -sS  -X POST --data-binary @"archive.tar.gz" -H 'Content-Type: application/octet-stream' -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://uploads.github.com/repos/jborkowski/crime-report/releases/$id/assets?name=crime-report_${{ github.ref_name }}_aarch64-apple-darwin.tar.gz"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
