--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ clap = { version = "4.0", features = ["derive"] }
 serde_json = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
-iso8601-timestamp = "0.1.11"
-octocrab = "0.18.1"
+iso8601-timestamp = "0.2.17"
+octocrab = "0.38.0"
 chrono = "0.4.23"
 tokio = { version = "1.4.0", features = ["full"] }
 tokio-stream = "0.1.11"
-async-trait = "0.1.60"
+async-trait = "0.1.80"
+jemallocator = "0.5.4"
+
