--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,13 @@ clap = { version = "4.0", features = ["derive"] }
 serde_json = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
-iso8601-timestamp = "0.2.17"
-octocrab = "0.38.0"
+iso8601-timestamp = "0.3.1"
+octocrab = {version ="0.42.1", features = [ "stream"]}
 chrono = "0.4.23"
 tokio = { version = "1.4.0", features = ["full"] }
 tokio-stream = "0.1.11"
 async-trait = "0.1.80"
+futures-util = "0.3.31"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = "0.5.4"
